--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <div class="topContainer">
       <div class="">
-        <img class="top-cloud" src="Images/Cloud2.png" alt="Cloud-image">
+        <img class="top-cloud" src="Images/cloud2.png" alt="Cloud-image">
         <h1>I'm Darshan</h1>
         <p class="belowIntro">a competitive programmer and web designer.</p>
-        <img class="bottom-cloud" src="Images/Cloud2.png" alt="Cloud-image">
+        <img class="bottom-cloud" src="Images/cloud2.png" alt="Cloud-image">
       </div>
       <img class="mountain" src="Images/mountain5.png" alt="Mountain-image">
     </div>
